# cappulcu

./: CappulcuApp.swift  LICENSE  README.md  setup.sh
.github/workflows/: android-build.yml
src/android/: settings.gradle
src/android/app/: build.gradle
src/android/app/src/main/java/com/cappulcu/assistant/: AndroidManifest.xml  AudioWaveView.kt  CMakeLists.txt  CappulcuService.kt  LlamaEngine.kt  MainActivity.kt  MemoryDatabase.kt  PiperTTS.kt  WhisperEngine.kt  activity_main.xml  build.gradle  setup.sh
src/android/app/src/main/res/layout/src/main/cpp/: CMakeLists.txt
src/android/app/src/main/res/layout/src/main/res/layout/: activity_main.xml
src/android/app/src/main/res/values/: strings.xml
src/ios/ios/: AudioWaveView.swift  ContentView.swift  README.md
